Changed Hello world with img and h2 to display simple profile data. Image file added in the folder images and used as resource in the img element in index.html file

--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+  </head>
+  <body>
+    <div>
+        <img src="images/ismailFajar.jpg" alt="profile image" />
+        <h2>Ismail Fajar</h2>
+    </div>
+  </body>
+ </html>
