added new div as footer container with id = footer

--- a/Index.html
+++ b/Index.html
@@ -8,5 +8,6 @@
         <img id="profile-image" src="images/ismailFajar.jpg" alt="profile image" />
         <h2 id="profile-nama">Ismail Fajar</h2>
     </div>
+    <div id="footer">Footer</div>
   </body>
  </html>
